--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "1719964921051.jpg"
   name             : "Federico Trastulli"
   pronouns         : # example: "she/her"  
   bio              : "Political Scientist, University of Verona & Italian Centre for Electoral Studies (CISE)"
