--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,9 @@ author:
   avatar           : "1719964921051.jpg"
   name             : "Federico Trastulli"
   pronouns         : # example: "she/her"  
-  bio              : "Political Scientist"
+  bio              : "Political Scientist at University of Verona, Italian Centre for Electoral Studies (CISE)"
   location         : "Verona, Italy"
   employer         : "University of Verona"
-  employer         : "Italian Centre for Electoral Studies (CISE)"
   uri              : # URL
   email            : "ftrastulli@luiss.it" 
 
