--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "1719964921051.jpg"
   name             : "Federico Trastulli"
   pronouns         : # example: "she/her"  
-  bio              : "Political Scientist at University of Verona, Italian Centre for Electoral Studies (CISE)"
+  bio              : "Political Scientist<br>University of Verona,<br>Italian Centre for Electoral Studies"
   location         : "Verona, Italy"
   employer         : "University of Verona"
   uri              : # URL
