--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,8 +32,8 @@ main:
   - title: "Outreach"
     url: /outreach/
 
-  - title: "Updates"
-    url: /updates/
+ # - title: "Updates"
+ #  url: /updates/
 
   - title: "Contact"
     url: /contact/
