--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,6 +32,9 @@ main:
   - title: "Outreach"
     url: /outreach/
 
+ # - title: "Awards"
+ #   url: /awards/
+
  # - title: "Updates"
  #  url: /updates/
 
